# pokemon-champions-rl

./: .gitignore  LICENSE  README.md  pyproject.toml  requirements.txt
.cursor/rules/agent/: overview.mdc  paper-index.mdc  theory-reference.mdc  update-docs-scope.mdc
.cursor/rules/game-domain/: legality.mdc  overview.mdc  stat-points.mdc
.cursor/rules/meta-priors/: data-pipeline.mdc  overview.mdc
.cursor/rules/simclient/: contract.mdc  overview.mdc  showdown-engine-api.mdc  worker-protocol.mdc
.cursor/rules/testing/: conventions.mdc  overview.mdc  typescript-for-python-devs.mdc
.github/workflows/: test.yml
data/legal/: abilities.txt  items.txt  learnsets.json  pokemon.txt
data/tournaments/: _tournaments_meta.json  sitrus-series-champions-100-to-1st.json  vgc-trainer-school-champions-format-m-a-2.json  wolfey-patreon-tournament-pokémon-champions-2.json
docs/: article_summary_3.md  article_summary_5.md  article_summary_7.md  gt-cfr-theory.md  repo-architecture.md  response.md  search-nn-interface.md  state-encoding.md
docs/architecture/: gt-cfr-theory.md  repo-architecture.md  search-nn-interface.md  state-encoding.md
docs/plans/: action-space.md  belief-model.md  cvpn.md  encoder.md  evaluation.md  replay-buffer.md  search.md  self-play.md  sim-client.md  trainer.md
docs/research/: article_summary.md  article_summary_2.md  article_summary_4.md  article_summary_6.md
docs/transcripts/: correlated-meta-priors_a7f6c182.md  gt-cfr-search-nn-interface_f112bffd.md  kuhn-poker-gt-cfr-build_686af863.md  leduc-poker-gt-cfr-build_4490bb54.md  mcts-strategy-for-pokemon_dc2d3bfe.md  mcts-vs-alphazero-mechanics_c48b0545.md  pog-paper-parameters_fd219ba0.md  state-encoding-and-gt-cfr-north-star_28098d4e.md
meta_priors/: app.py  check_legality.py  data_loader.py  download_sprites.py  legality.py  scrape_learnsets.py
research/: notes.md
scripts/: check_team_legality.py  convert_transcripts.py  update_rule_sync_markers.py
sim/: package-lock.json  package.json  tsconfig.json
sim/src/: battle-runner.ts  clone-spike.ts  replay-export.ts  sim-worker.ts  test-battle.ts  types.ts
sim/tests/: battle-runner.test.ts  sim-worker.test.ts
sim/tests/fixtures/: teams.ts
sim/tests/integration/: battle.test.ts  e2e-battle.test.ts
src/: action_space.py  encoder.py  obs_bundle.py  sim_client.py  vocab.py
src/meta_priors/: app.py  check_legality.py  clustering.py  data_loader.py  download_sprites.py  legality.py  scrape_learnsets.py
tests/: conftest.py  test_sim_client.py
tests/integration/: test_encoder_pipeline.py  test_sim_client.py
tests/unit/: test_action_space.py  test_encoder.py  test_obs_bundle.py  test_vocab.py
toy_examples/kuhn_poker/: README.md  __main__.py  exploitability.py  game.py  gt_cfr_search.py  network.py  run.py  self_play.py  visualize.py
toy_examples/leduc_poker/: __main__.py  exploitability.py  game.py  gt_cfr_search.py  network.py  run.py  self_play.py  visualize.py
