[project]
name = "pokemon-vgc-agent"
version = "0.1.0"
description = "Reinforcement learning agent for competitive Pokemon VGC double battles"
requires-python = ">=3.10"
dependencies = [
    "stable-baselines3",
    "ray[rllib]",
    "poke-env",
    "torch",
    "numpy",
    "gymnasium",
    "tensorboard",
    "pydantic",
    "scikit-learn",
    "streamlit",
    "pandas",
    "requests",
    "plotly",
]

[project.optional-dependencies]
dev = [
    "pylint",
    "pylint-pydantic",
    "pytest",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
markers = [
    "slow: long-running tests (skip with: pytest -m 'not slow')",
]

[tool.pylint.main]
ignore = ["tests"]

[tool.pylint.messages_control]
disable = ["C0114", "C0115", "C0116"]
